--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@
 # /public/build
 # /public/hot
 # /public/storage
-/storage/*.key
-/storage/pail
+# /storage/*.key
+# /storage/pail
 /vendor
 .env
 .env.backup
