--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 /.phpunit.cache
 /bootstrap/ssr
 /node_modules
-# /public/build
-# /public/hot
+/public/build
+/public/hot
 # /public/storage
-# /storage/*.key
-# /storage/pail
+/storage/*.key
+/storage/pail
 /vendor
 .env
 .env.backup
@@ -22,3 +22,5 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
+# ✅ Laat uploads in storage/app/public NIET negeren
+!/storage/app/public
