--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /.phpunit.cache
 /bootstrap/ssr
 /node_modules
-/public/build
-/public/hot
+# /public/build
+# /public/hot
 # /public/storage
 /storage/*.key
 /storage/pail
@@ -22,5 +22,3 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
-# ✅ Laat uploads in storage/app/public NIET negeren
-!/storage/app/public
